fix: Infisical action config (project-slug) and workflow updates
- Update all workflow files to use project-slug instead of project-id
- Use Infisical action v1.0.15
- Update gitignore for sentry.properties
- Various mobile app configuration updates

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,9 @@ apps/**/pnpm-lock.yaml
 package-lock.json
 package-lock.json
 .vercel
+
+# Sentry properties with auth tokens
+apps/mobile/sentry.properties
+apps/mobile/ios/sentry.properties
+apps/mobile/android/sentry.properties
+
