--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,12 +44,12 @@ jobs:
           cache: 'pnpm'
 
       - name: 🔐 Import secrets from Infisical
-        uses: infisical/secrets-action@v1
+        uses: Infisical/secrets-action@v1.0.15
         with:
           method: universal-auth
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-slug: lovendo-app-infisical2
           env-slug: prod
         continue-on-error: true
 
@@ -82,12 +82,12 @@ jobs:
           cache: 'pnpm'
 
       - name: 🔐 Import secrets from Infisical
-        uses: infisical/secrets-action@v1
+        uses: Infisical/secrets-action@v1.0.15
         with:
           method: universal-auth
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-slug: lovendo-app-infisical2
           env-slug: prod
         continue-on-error: true
 
