--- a/.github/workflows/database-migrations.yml
+++ b/.github/workflows/database-migrations.yml
@@ -106,12 +106,12 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: infisical/secrets-action@v1
+        uses: Infisical/secrets-action@v1.0.15
         with:
           method: universal-auth
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-slug: lovendo-app-infisical2
           env-slug: dev
 
       - name: Setup Supabase CLI
@@ -149,12 +149,12 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: infisical/secrets-action@v1
+        uses: Infisical/secrets-action@v1.0.15
         with:
           method: universal-auth
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-slug: lovendo-app-infisical2
           env-slug: prod
 
       - name: Setup Supabase CLI
