--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -2,13 +2,13 @@
   "name": "@lovendo/mobile",
   "version": "1.0.0",
   "description": "Lovendo Mobile App - React Native + Expo",
-  "main": "index.ts",
+  "main": "index.js",
   "private": true,
   "scripts": {
-    "dev": "pnpm exec expo start",
-    "start": "pnpm exec expo start",
-    "android": "pnpm exec expo run:android",
-    "ios": "pnpm exec expo run:ios",
+    "dev": "infisical run --env=dev -- pnpm exec expo start --dev-client",
+    "start": "infisical run --env=dev -- pnpm exec expo start --dev-client",
+    "android": "infisical run --env=dev -- pnpm exec expo run:android",
+    "ios": "infisical run --env=dev -- pnpm exec expo run:ios",
     "web": "pnpm exec expo start --web",
     "dev:infisical": "infisical run --env=dev -- pnpm exec expo start",
     "ios:infisical": "infisical run --env=dev -- pnpm exec expo run:ios",
@@ -41,6 +41,8 @@
   "dependencies": {
     "@expo/vector-icons": "~15.0.3",
     "@hookform/resolvers": "^5.2.2",
+    "@lovendo/design-system": "workspace:*",
+    "@lovendo/shared": "workspace:*",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.6.0",
     "@react-native-community/netinfo": "^11.4.1",
@@ -56,9 +58,8 @@
     "@tanstack/query-async-storage-persister": "^5.90.18",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-persist-client": "^5.90.18",
-    "@lovendo/design-system": "workspace:*",
-    "@lovendo/shared": "workspace:*",
     "@types/supercluster": "^7.1.3",
+    "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "expo": "~54.0.31",
     "expo-application": "^7.0.8",
@@ -88,6 +89,7 @@
     "expo-updates": "~29.0.16",
     "expo-video-thumbnails": "^10.0.8",
     "i18next": "^25.7.3",
+    "lucide-react-native": "^0.561.0",
     "pako": "^2.1.0",
     "posthog-react-native": "^4.16.2",
     "react": "19.1.0",
@@ -98,17 +100,20 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-compressor": "^1.14.0",
     "react-native-confetti-cannon": "^1.5.2",
-    "react-native-gesture-handler": "~2.28.0",
+    "react-native-gesture-handler": "2.28.0",
+    "react-native-get-random-values": "^2.0.0",
     "react-native-mmkv": "^4.1.0",
     "react-native-qrcode-svg": "^6.3.21",
-    "react-native-reanimated": "~4.1.6",
+    "react-native-reanimated": "~4.2.1",
     "react-native-safe-area-context": "5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.15.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.21.2",
     "react-native-webview": "^13.16.0",
     "supercluster": "^8.0.1",
+    "text-encoding-polyfill": "^0.6.7",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "zod": "^3.24.1",
@@ -117,6 +122,9 @@
   "devDependencies": {
     "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@eslint/js": "^9.39.2",
+    "@react-native-community/cli": "^20.1.0",
+    "@react-native-community/cli-platform-ios": "^20.1.0",
+    "@react-native/metro-config": "^0.83.1",
     "@storybook/react-native": "^10.1.1",
     "@testing-library/react-native": "14.0.0-alpha.1",
     "@types/jest": "^29.5.14",
@@ -138,7 +146,6 @@
     "eslint-plugin-react-native": "^5.0.0",
     "jest": "^29.7.0",
     "jest-expo": "^54.0.16",
-    "lucide-react-native": "^0.561.0",
     "prettier": "^3.7.4",
     "react-test-renderer": "19.1.0",
     "storybook": "^10.1.10",
@@ -149,16 +156,5 @@
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
-  },
-  "expo": {
-    "install": {
-      "exclude": [
-        "@shopify/flash-list",
-        "@react-native-community/datetimepicker",
-        "@sentry/react-native",
-        "react-native-svg",
-        "react-native-webview"
-      ]
-    }
   }
 }
