--- a/apps/mobile/tsconfig.eslint.json
+++ b/apps/mobile/tsconfig.eslint.json
@@ -6,18 +6,16 @@
   "include": [
     "src/**/*",
     "src/types/*.d.ts",
-    "index.ts",
+    "index.js",
     "App.tsx",
+    "app.config.ts",
+    "metro.config.js",
+    "babel.config.js",
     "**/__tests__/**/*",
     "**/*.test.ts",
     "**/*.test.tsx",
     "**/*.spec.ts",
     "**/*.spec.tsx"
   ],
-  "exclude": [
-    "node_modules",
-    "android",
-    "ios",
-    ".expo"
-  ]
+  "exclude": ["node_modules", "android", "ios", ".expo"]
 }
