refactor: Replace Stripe with PayTR payment system
BREAKING CHANGE: Stripe integration completely removed

- Remove all Stripe references from codebase
- Replace with PayTR for payment processing
- Replace Stripe Identity with idenfy for KYC
- Update environment variable names (STRIPE_* -> PAYTR_*)
- Update admin dashboard integration references
- Update CI/CD workflows for PayTR
- Add migration to remove stripe_customer_id column
- Update test files for new payment provider

Note: PayTR and idenfy are now the official providers for
Lovendo's payment and KYC functionality.

--- a/.github/workflows/deploy-supabase.yml
+++ b/.github/workflows/deploy-supabase.yml
@@ -85,8 +85,9 @@ jobs:
           echo "Setting Edge Function secrets from Infisical..."
           # Secrets are already imported from Infisical in previous step
           supabase secrets set \
-            STRIPE_SECRET_KEY="$STRIPE_SECRET_KEY" \
-            STRIPE_WEBHOOK_SECRET="$STRIPE_WEBHOOK_SECRET" \
+            PAYTR_MERCHANT_ID="$PAYTR_MERCHANT_ID" \
+            PAYTR_MERCHANT_KEY="$PAYTR_MERCHANT_KEY" \
+            PAYTR_MERCHANT_SALT="$PAYTR_MERCHANT_SALT" \
             OPENAI_API_KEY="$OPENAI_API_KEY" \
             CLOUDFLARE_STREAM_API_KEY="$CLOUDFLARE_STREAM_API_KEY" \
             CLOUDFLARE_STREAM_ACCOUNT_ID="$CLOUDFLARE_STREAM_ACCOUNT_ID" \
