--- a/services/.env.example
+++ b/services/.env.example
@@ -10,9 +10,10 @@ SUPABASE_URL=https://bjikxgtbptrvawkguypv.supabase.co
 # OpenAI
 OPENAI_API_KEY=sk-xxxxx
 
-# Stripe
-STRIPE_SECRET_KEY=sk_test_xxxxx
-STRIPE_WEBHOOK_SECRET=whsec_xxxxx
+# PayTR (Payment Processing)
+PAYTR_MERCHANT_ID=xxxxx
+PAYTR_MERCHANT_KEY=xxxxx
+PAYTR_MERCHANT_SALT=xxxxx
 
 # Twilio (SMS & Phone Verification)
 TWILIO_ACCOUNT_SID=ACxxxxx
