--- a/.github/workflows/monorepo-ci.yml
+++ b/.github/workflows/monorepo-ci.yml
@@ -33,12 +33,12 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: 🔐 Import secrets from Infisical
-        uses: infisical/secrets-action@v1
+        uses: Infisical/secrets-action@v1.0.15
         with:
           method: universal-auth
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-slug: lovendo-app-infisical2
           env-slug: ${{ github.ref_name == 'main' && 'prod' || 'dev' }}
 
       - name: Build packages
@@ -133,12 +133,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: infisical/secrets-action@v1
+        uses: Infisical/secrets-action@v1.0.15
         with:
           method: universal-auth
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-slug: lovendo-app-infisical2
           env-slug: prod
 
       - name: Setup Supabase CLI
@@ -164,5 +164,5 @@ jobs:
           SUPABASE_PROJECT_REF: ${{ env.SUPABASE_PROJECT_REF }}
           SUPABASE_ACCESS_TOKEN: ${{ env.SUPABASE_ACCESS_TOKEN }}
           OPENAI_API_KEY: ${{ env.OPENAI_API_KEY }}
-          STRIPE_SECRET_KEY: ${{ env.STRIPE_SECRET_KEY }}
-          STRIPE_WEBHOOK_SECRET: ${{ env.STRIPE_WEBHOOK_SECRET }}
+          PAYTR_MERCHANT_KEY: ${{ env.PAYTR_MERCHANT_KEY }}
+          PAYTR_MERCHANT_SALT: ${{ env.PAYTR_MERCHANT_SALT }}
