--- a/package.json
+++ b/package.json
@@ -83,7 +83,6 @@
     "openai": "^6.14.0",
     "prettier": "^3.7.4",
     "react-test-renderer": "19.1.0",
-    "stripe": "^20.1.0",
     "tsx": "^4.21.0",
     "turbo": "^2.6.3",
     "typescript": "~5.9.3",
@@ -135,6 +134,11 @@
       "sharp",
       "unrs-resolver"
     ]
+  },
+  "pnpm": {
+    "overrides": {
+      "tar": ">=7.5.4"
+    }
   },
   "dependencies": {
     "expo": "~54.0.31",
