fix: resolve Jest test failures in mobile app

--- a/.npmrc
+++ b/.npmrc
@@ -4,3 +4,4 @@ shamefully-hoist=true
 public-hoist-pattern[]=expo-*
 public-hoist-pattern[]=@expo/*
 public-hoist-pattern[]=react-native*
+engine-strict=true
