--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -8,7 +8,7 @@
     "build:ci": "next build",
     "start": "next start -p 3001",
     "dev:infisical": "infisical run --env=dev -- next dev -p 3001",
-    "lint": "eslint src --ext .ts,.tsx || true",
+    "lint": "eslint src",
     "type-check": "echo 'Admin type-check skipped (Next.js handles build-time types)' && exit 0",
     "type-check:strict": "tsc --noEmit",
     "test": "jest --passWithNoTests",
@@ -74,7 +74,6 @@
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.39.2",
-    "eslint-config-next": "16.0.10",
     "jest": "^29.7.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0",
