--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,7 +18,7 @@
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --maxWorkers=2",
     "test:staged": "jest --bail --findRelatedTests --passWithNoTests",
-    "lint": "NODE_OPTIONS='--max-old-space-size=12288' eslint --cache --cache-location .eslintcache src --ext .ts,.tsx",
+    "lint": "NODE_OPTIONS='--max-old-space-size=12288' eslint --cache --cache-location .eslintcache src",
     "lint:fix": "NODE_OPTIONS='--max-old-space-size=12288' eslint --cache --cache-location .eslintcache src --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
@@ -68,6 +68,7 @@
     "expo-clipboard": "^8.0.8",
     "expo-constants": "~18.0.13",
     "expo-crypto": "~15.0.8",
+    "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
