WIP: Antigravity çalışmaları ve conflictli dosyalar

--- a/apps/mobile/android/gradle.properties
+++ b/apps/mobile/android/gradle.properties
@@ -66,3 +66,13 @@ expo.edgeToEdgeEnabled=true
 
 expoRNMapboxMapsVersion=11.16.2
 android.enableMinifyInReleaseBuilds=true
+
+# ============================================
+# LOVENDO PRODUCTION SIGNING CONFIG
+# Replace placeholders before release build
+# ============================================
+# Generate keystore: keytool -genkeypair -v -storepass YOUR_PASSWORD -keystore lovendo-upload-key.keystore -alias lovendo-key-alias -keyalg RSA -keysize 2048 -validity 10000
+# LOVENDO_UPLOAD_STORE_FILE=lovendo-upload-key.keystore
+# LOVENDO_UPLOAD_KEY_ALIAS=lovendo-key-alias
+# LOVENDO_UPLOAD_STORE_PASSWORD=YOUR_SECURE_PASSWORD
+# LOVENDO_UPLOAD_KEY_PASSWORD=YOUR_SECURE_PASSWORD
