--- a/apps/mobile/android/app/build.gradle
+++ b/apps/mobile/android/app/build.gradle
@@ -114,15 +114,30 @@ packagingOptions {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            // Production signing - configure in gradle.properties:
+            // LOVENDO_UPLOAD_STORE_FILE, LOVENDO_UPLOAD_KEY_ALIAS,
+            // LOVENDO_UPLOAD_STORE_PASSWORD, LOVENDO_UPLOAD_KEY_PASSWORD
+            if (project.hasProperty('LOVENDO_UPLOAD_STORE_FILE')) {
+                storeFile file(LOVENDO_UPLOAD_STORE_FILE)
+                storePassword LOVENDO_UPLOAD_STORE_PASSWORD
+                keyAlias LOVENDO_UPLOAD_KEY_ALIAS
+                keyPassword LOVENDO_UPLOAD_KEY_PASSWORD
+            } else {
+                // Fallback to debug for local testing
+                storeFile file('debug.keystore')
+                storePassword 'android'
+                keyAlias 'androiddebugkey'
+                keyPassword 'android'
+            }
+        }
     }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             def enableShrinkResources = findProperty('android.enableShrinkResourcesInReleaseBuilds') ?: 'false'
             shrinkResources enableShrinkResources.toBoolean()
             minifyEnabled enableMinifyInReleaseBuilds
