chore: remove all documentation and sanitize secret placeholders

--- a/services/.env.example
+++ b/services/.env.example
@@ -8,7 +8,7 @@ SUPABASE_URL=https://bjikxgtbptrvawkguypv.supabase.co
 # SUPABASE_SERVICE_KEY=... (gerekirse yeni service key buraya eklenmeli)
 
 # OpenAI
-OPENAI_API_KEY=sk-xxxxx
+OPENAI_API_KEY=YOUR_OPENAI_KEY_FROM_INFISICAL
 
 # PayTR (Payment Processing)
 PAYTR_MERCHANT_ID=xxxxx
@@ -22,7 +22,7 @@ TWILIO_PHONE_NUMBER=+1234567890
 TWILIO_VERIFY_SERVICE_SID=VAxxxxx
 
 # SendGrid (Email)
-SENDGRID_API_KEY=SG.xxxxx
+SENDGRID_API_KEY=YOUR_SENDGRID_KEY_FROM_INFISICAL
 SENDGRID_FROM_EMAIL=noreply@lovendo.xyz
 SENDGRID_FROM_NAME=Lovendo
 # SendGrid Template IDs (create in SendGrid dashboard)
