fix(mobile): ui updates and gating

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -53,6 +53,10 @@
     "android",
     "ios",
     ".expo",
+    "src/**/*.stories.*",
+    "src/**/*.test.*",
+    "src/**/*.spec.*",
+    "src/**/__tests__/**",
     "src/examples/**",
     "src/components/AccessibleVideoPlayer.tsx",
     "src/components/AnalyticsDashboard.tsx",
