--- a/services/tsconfig.json
+++ b/services/tsconfig.json
@@ -13,10 +13,5 @@
   },
   "include": [],
   "exclude": ["**/*"],
-  "references": [
-    { "path": "./job-queue" },
-    { "path": "./payment" },
-    { "path": "./ml" },
-    { "path": "./shared" }
-  ]
+  "references": [{ "path": "./job-queue" }, { "path": "./payment" }, { "path": "./shared" }]
 }
