chore: sync developer updates

--- a/.env.example
+++ b/.env.example
@@ -67,12 +67,17 @@ SUPABASE_URL_AP_SOUTHEAST=https://ap-southeast.supabase.co
 SUPABASE_URL_EU_CENTRAL=https://eu-central.supabase.co
 
 # ====================================================================
-# PAYMENT SERVICES (PayTR)
+# PAYMENT SERVICES (PayTR - WITHDRAWAL ONLY)
 # ====================================================================
 # Get these from: https://www.paytr.com/panel/integration
 #
+# ⚠️ APPLE IAP COMPLIANCE ⚠️
+# PayTR is ONLY used for user WITHDRAWALS (money out to bank accounts).
+# ALL purchases must use RevenueCat/IAP (Apple/Google In-App Purchase).
+#
 # ⚠️ SECURITY: All PayTR credentials are SECRET - server-side only!
-# Payment is handled entirely via Edge Functions (paytr-create-payment, etc.)
+# Used by: paytr-withdraw Edge Function ONLY
+# DISABLED: paytr-create-payment, paytr-tokenize-card, paytr-saved-cards
 # --------------------------------------------------------------------
 
 # PayTR Merchant ID (SECRET - server-side only!)
