--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -148,6 +148,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-native": "^5.0.0",
+    "expo-module-scripts": "^5.0.8",
     "jest": "^29.7.0",
     "jest-expo": "^54.0.16",
     "prettier": "^3.7.4",
