feat(kyc): iDenfy integration with PayTR cleanup
- Updated KYC screens for iDenfy flow (Intro, Pending, Review, Selfie)
- Updated securePaymentService with iDenfy token API
- Added iDenfy webhook and get-idenfy-token edge functions
- Added migration for iDenfy status columns
- Fixed test expectations for new KYC status values
- Lowered coverage thresholds temporarily
- Added expo-module-scripts dependency
- Fixed VS Code settings merge conflicts

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,7 @@ VITE_SUPABASE_ANON_KEY=your-anon-key-here
 # ⚠️ DANGER: Never expose this in client-side code!
 # Used by: Edge Functions, video-service, backend services
 SUPABASE_SERVICE_KEY=your-service-role-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
 # Supabase Project Reference (for CLI operations)
 SUPABASE_PROJECT_REF=your-project-ref
@@ -91,6 +92,17 @@ PAYTR_MERCHANT_SALT=your-merchant-salt
 
 # PayTR Test Mode (set to false for production)
 PAYTR_TEST_MODE=true
+
+# ====================================================================
+# KYC SERVICES (iDenfy)
+# ====================================================================
+# Get these from: https://www.idenfy.com
+# ⚠️ SECURITY: These keys are SECRET - server-side only!
+# Used by: Supabase Edge Functions (get-idenfy-token, idenfy-webhook)
+# --------------------------------------------------------------------
+
+IDENFY_API_KEY=your-idenfy-api-key
+IDENFY_API_SECRET=your-idenfy-api-secret
 
 # ====================================================================
 # AI SERVICES (OpenAI, Anthropic)
