--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
   "typescript.enablePromptUseWorkspaceTsdk": true,
   // Ignore errors from node_modules (package internal configs)
   "typescript.validate.enable": true,
+  "typescript.tsserver.exclude": ["**/node_modules/**"],
 
   // ESLint
   "eslint.workingDirectories": ["./apps/mobile", "./admin", "./packages/design-system", "./packages/shared"],
@@ -74,14 +75,8 @@
 
   // Jest Configuration - run from apps/mobile for proper config
   "jest.rootPath": "apps/mobile",
-<<<<<<< Updated upstream
   "jest.jestCommandLine": "pnpm jest",
   "jest.autoRevealOutput": "on-exec-error",
   "snyk.advanced.organization": "65f49e60-e063-4544-980e-9a5bc8d0ab0b",
   "snyk.advanced.autoSelectOrganization": true
-=======
-  "jest.jestCommandLine": "npx jest",
-  "jest.autoRevealOutput": "on-exec-error",
-  "java.configuration.updateBuildConfiguration": "automatic"
->>>>>>> Stashed changes
 }
