--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "expo-module-scripts": "^5.0.8",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "openai": "^6.14.0",
