fix(vercel): simplify vercel configs for deployment
- Remove nodeVersion (not valid property)
- Use turbo for monorepo builds

--- a/apps/admin/vercel.json
+++ b/apps/admin/vercel.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "installCommand": "pnpm install",
-  "buildCommand": "pnpm build",
+  "framework": "nextjs",
+  "buildCommand": "turbo run build --filter=@lovendo/admin...",
   "outputDirectory": ".next",
-  "framework": "nextjs"
+  "installCommand": "pnpm install",
+  "devCommand": "turbo run admin#dev"
 }
